--- a/server/v1/requirements.txt
+++ b/server/v1/requirements.txt
@@ -1,13 +1,19 @@
 annotated-types==0.6.0
 anyio==3.7.1
+bidict==0.22.1
 click==8.1.7
 exceptiongroup==1.1.3
 fastapi==0.104.0
+fastapi-socketio==0.0.10
 h11==0.14.0
 idna==3.4
 pydantic==2.4.2
 pydantic_core==2.10.1
+python-engineio==4.8.0
+python-socketio==5.10.0
+simple-websocket==1.0.0
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.8.0
 uvicorn==0.23.2
+wsproto==1.2.0
