--- a/server/v1/requirements.txt
+++ b/server/v1/requirements.txt
@@ -1,19 +1,45 @@
 annotated-types==0.6.0
 anyio==3.7.1
+appnope==0.1.3
+asttokens==2.4.0
+backcall==0.2.0
 bidict==0.22.1
+certifi==2023.7.22
+charset-normalizer==3.3.0
 click==8.1.7
+decorator==5.1.1
+elevenlabs==0.2.26
 exceptiongroup==1.1.3
+executing==2.0.0
 fastapi==0.104.0
 fastapi-socketio==0.0.10
 h11==0.14.0
 idna==3.4
+ipython==8.16.1
+jedi==0.19.1
+matplotlib-inline==0.1.6
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.39
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pydantic==2.4.2
 pydantic_core==2.10.1
+Pygments==2.16.1
+python-dotenv==1.0.0
 python-engineio==4.8.0
 python-socketio==5.10.0
+requests==2.31.0
 simple-websocket==1.0.0
+six==1.16.0
 sniffio==1.3.0
+stack-data==0.6.3
 starlette==0.27.0
+traitlets==5.11.2
 typing_extensions==4.8.0
+urllib3==2.0.7
 uvicorn==0.23.2
+wcwidth==0.2.8
+websockets==11.0.3
 wsproto==1.2.0
