--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@motify/components": "^0.18.0",
+    "@motify/core": "^0.18.0",
+    "@tamagui/animations-css": "^1.74.21",
+    "@tamagui/animations-react-native": "^1.74.21",
     "@tamagui/config": "^1.74.21",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-reanimated": "^3.5.4",
     "react-native-web": "~0.19.6",
     "tamagui": "^1.74.21",
-    "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
