--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@tamagui/config": "^1.74.21",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-navigation": "^7.37.1",
     "react-native-web": "~0.19.6",
+    "react-router-native": "^6.17.0",
     "tamagui": "^1.74.21",
-    "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
