--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,17 @@
     "@motify/components": "^0.18.0",
     "@motify/core": "^0.18.0",
     "@tamagui/animations-react-native": "^1.74.21",
+    "@tamagui/babel-plugin": "^1.74.21",
     "@tamagui/config": "^1.74.21",
+    "@tamagui/font-inter": "^1.74.21",
     "@types/react": "~18.2.14",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-reanimated": "^3.5.4",
+    "react-native-reanimated": "~3.3.0",
     "react-native-web": "~0.19.6",
     "tamagui": "^1.74.21",
     "typescript": "^5.1.3"
