--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@expo/webpack-config": "^19.0.0",
     "@motify/components": "^0.18.0",
     "@motify/core": "^0.18.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.15",
     "@tamagui/animations-react-native": "^1.74.21",
     "@tamagui/babel-plugin": "^1.74.21",
     "@tamagui/config": "^1.74.21",
@@ -24,6 +26,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-navigation": "^7.37.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.17.0",
     "tamagui": "^1.74.21",
