--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@motify/components": "^0.18.0",
     "@motify/core": "^0.18.0",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
     "@tamagui/animations-react-native": "^1.74.21",
@@ -28,10 +29,12 @@
     "react-native-navigation": "^7.37.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.17.0",
     "tamagui": "^1.74.21",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-av": "~13.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
