--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,12 @@
     "@types/react": "~18.2.14",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-animated-sprite": "^0.11.1",
     "react-native-navigation": "^7.37.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -33,8 +35,7 @@
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.17.0",
     "tamagui": "^1.74.21",
-    "typescript": "^5.1.3",
-    "expo-av": "~13.4.1"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
