--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.17.0",
     "tamagui": "^1.74.21",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-camera": "~13.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
