--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.1",
     "@expo/webpack-config": "^19.0.0",
     "@motify/components": "^0.18.0",
     "@motify/core": "^0.18.0",
@@ -24,6 +25,7 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~49.0.15",
     "expo-av": "~13.4.1",
+    "expo-camera": "~13.4.4",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,8 +38,7 @@
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.17.0",
     "tamagui": "^1.74.21",
-    "typescript": "^5.1.3",
-    "expo-camera": "~13.4.4"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
