--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-animated-sprite": "^0.11.1",
+    "react-native-fs": "^2.20.0",
     "react-native-navigation": "^7.37.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
