--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-native-navigation": "^7.37.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.14.0",
     "react-native-typewriter": "^0.7.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
